<resources>
    <string name="app_name">Android Project Collection</string>
    <string name="picture">Picture</string>
    <string name="button_share">SHARE</string>
    <string name="button_like">LIKE</string>
    <string name="name_mark">Mark</string>
    <string name="name_kyle">Kyle</string>
    <string name="name_dave">Dave</string>
    <string name="name_paul">Paul</string>
    <string name="name_luis">Luis</string>
    <string name="name_josh">Josh</string>
    <string name="description">Description</string>
    <string name="text_comment">Comment</string>
    <string name="btnClose">Close</string>
    <string name="btnToast">Toast</string>
    <string name="btnChangeBG">Change BG</string>
    <string name="btnChangeButtonBG">Change Button BG</string>
    <string name="btnDisappear">Disappear</string>
    <string name="btnReturn">Return</string>
    <string name="numberDisplay">0</string>
    <string name="empty"></string>
    <string name="num0Button">0</string>
    <string name="num1Button">1</string>
    <string name="num2Button">2</string>
    <string name="num3Button">3</string>
    <string name="num4Button">4</string>
    <string name="num5Button">5</string>
    <string name="num6Button">6</string>
    <string name="num7Button">7</string>
    <string name="num8Button">8</string>
    <string name="num9Button">9</string>
    <string name="divideButton">/</string>
    <string name="addButton">+</string>
    <string name="minusButton">-</string>
    <string name="multiplyButton">*</string>
    <string name="decimalButton">.</string>
    <string name="equalsButton">=</string>
    <string name="clearButton">Clear</string>
    <string name="deleteButton">Del</string>
    <string name="layoutExercise">Layout</string>
    <string name="calculatorExercise">Calculator</string>
    <string name="buttonExercise">Button</string>
    <string name="exercises">EXERCISES</string>
    <string name="buttonsExerciseLabel">BUTTONS</string>
    <string name="Match3">PLAY MATCH 3</string>
    <string name="btnRestart">Restart</string>
    <string name="btnMidtermExam">Midterm Exam</string>
    <string name="midterm_exam_main_button">Play</string>
    <string name="midterm_exam_main_label">Tic Tac Toe</string>
    <string name="restart_button">Restart</string>
    <string name="x_symbol">X</string>
    <string name="o_symbol">O</string>
    <string name="match_3_score">Score: 0</string>
    <string name="btnPassingIntents">Passing Intents</string>
    <string name="btnMaps">Opening Maps</string>
    <string name="btnMenus">Menus</string>
    <string name="registerLabel">Student Registration Form</string>
    <string name="registerSubLabel">Complete Name</string>
    <string name="registerFirstName">First Name</string>
    <string name="registerLastName">Last Name</string>
    <string name="registerGenderLabel">Gender</string>
    <string name="registerGenderMale">Male</string>
    <string name="registerGenderFemale">Female</string>
    <string name="registerGenderOthers">Others</string>
    <string name="registerBDay">Birth Date</string>
    <string name="registerPhoneNumber">Phone Number</string>
    <string name="registerEmailAddress">Email Address</string>
    <string name="registerCivilStatus">Civil Status</string>
    <string name="registerNationality">Nationality</string>
    <string name="registerLocation">Location</string>
    <string name="registerCourse">Course</string>
    <string name="registerAge">Age</string>
    <string name="registerClearBtn">Clear</string>
    <string name="registerSubmitBtn">Submit</string>
    <string name="profileHeader">Student Profile</string>
    <string name="profileFirstName">First Name</string>
    <string name="profileLastName">Last Name</string>
    <string name="profileGender">Gender</string>
    <string name="profileBirthDate">Birth Date</string>
    <string name="profilePhoneNumber">Phone Number</string>
    <string name="profileEmailAddress">Email Address</string>
    <string name="profileCivilStatus">Civil Status</string>
    <string name="profileNationality">Nationality</string>
    <string name="profileCourse">Course</string>
    <string name="profileLocation">Location</string>
    <string name="profileAge">Age</string>
    <string name="blank"></string>
    <string name="mItemChange">Change</string>
    <string name="mItemReset">Reset</string>
    <string name="mItemExit">Exit</string>
    <string name="textMenuExercise">Transforming Button</string>
    <string name="mItem1">BG Color</string>
    <string name="mItem2">Text</string>
    <string name="mItem3">Text Color</string>
    <string name="mItem4">Shape</string>
    <string name="mItem5">Rotation</string>
    <string name="transformingButtonText">BUTTON</string>
    <string name="mapsLabel">VACATION</string>
</resources>