<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintButtonLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".button_exercise">

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#141414"
            android:text="@string/btnClose"
            android:textStyle="normal|bold|italic" />

        <Button
            android:id="@+id/btnToast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#141414"
            android:text="@string/btnToast"
            android:textStyle="normal|bold|italic" />

        <Button
            android:id="@+id/btnChangeBG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#141414"
            android:text="@string/btnChangeBG"
            android:textStyle="normal|bold|italic" />

        <Button
            android:id="@+id/btnChangeButtonBG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#141414"
            android:text="@string/btnChangeButtonBG"
            android:textStyle="normal|bold|italic" />

        <Button
            android:id="@+id/btnDisappear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#141414"
            android:text="@string/btnDisappear"
            android:textStyle="normal|bold|italic" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="273dp"
        android:layout_height="69dp"
        android:fontFamily="cursive"
        android:text="@string/buttonsExerciseLabel"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="normal|italic"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

</androidx.constraintlayout.widget.ConstraintLayout>