<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassingIntentsExercise">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registerHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="casual"
                android:text="@string/registerLabel"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/registerHeader2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerSubLabel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etxtFName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/registerFirstName"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/etxtLName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/registerLastName"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <TextView
                android:id="@+id/gendersRegisterTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerGenderLabel" />

            <RadioGroup
                android:id="@+id/radGroupGenders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radMale"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:foregroundTint="#FF0000"
                    android:text="@string/registerGenderMale" />

                <RadioButton
                    android:id="@+id/radFemale"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:text="@string/registerGenderFemale" />

                <RadioButton
                    android:id="@+id/radOthers"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:text="@string/registerGenderOthers" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bdateRegisterTextView"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/registerBDay" />

                <EditText
                    android:id="@+id/etxtBdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/blank" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pnumRegisterTextView"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/registerPhoneNumber" />

                <EditText
                    android:id="@+id/etxtPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/blank" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/eaddRegisterTextView"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/registerEmailAddress" />

                <EditText
                    android:id="@+id/etxtEmailAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:text="@string/blank" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/statusRegisterTextView"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/registerCivilStatus" />

                <EditText
                    android:id="@+id/etxtCivilStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/blank" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nationalityRegisterTextView"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/registerNationality" />

                <EditText
                    android:id="@+id/etxtNationality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/blank" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseRegisterTextView"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/registerCourse" />

                <EditText
                    android:id="@+id/etxtCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/blank" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/locationRegisterTextView"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/registerLocation" />

                <EditText
                    android:id="@+id/etxtLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/blank" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ageRegisterTextView"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/registerAge" />

                <EditText
                    android:id="@+id/etxtAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/blank" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPIClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#141414"
                    android:text="@string/registerClearBtn" />

                <Button
                    android:id="@+id/btnPISubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#141414"
                    android:text="@string/registerSubmitBtn" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>